# image-factory

./: .gitignore  README.md  Taskfile.shared.yaml  Taskfile.yaml  kargo-integration.test.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: synth.yml  test.yml
app/: app.py  generate_state.py  pyproject.toml
app/image_factory_tool.egg-info/: PKG-INFO  SOURCES.txt
app/tests/: test_app.py
cdk8s/: .gitignore  README.md  cdk8s.yaml  images.yaml  main.py  pyproject.toml  test_main.py
cdk8s/imports/io/akuity/kargo/: __init__.py
cdk8s/imports/k8s/_jsii/: k8s@0.0.0.jsii.tgz
cdk8s/imports/kargo/src/: combined.yaml  stages.yaml  warehouses.yaml
cdk8s/imports/stage/io/akuity/kargo/_jsii/: ioakuitykargo@0.0.0.jsii.tgz
cdk8s/imports/warehouse/io/akuity/kargo/: __init__.py
cdk8s/imports/warehouse/io/akuity/kargo/_jsii/: __init__.py  ioakuitykargo@0.0.0.jsii.tgz
cdk8s/lib/: __init__.py  analysis.py  data.py  infrastructure.py  resources.py  stages.py  steps.py  warehouses.py
tests/integration/: pyproject.toml  test_integration.py
